--- a/styles.css
+++ b/styles.css
@@ -194,15 +194,26 @@ section p {
 .rte-media img {
   display: block;
   margin: 10px auto;
-  max-width: 100%;
+  max-height: 250px;
+  width: auto;
+  border-radius: 12px; 
+}
+
+.rte-media video {
+  display: block;
+  margin: 10px auto;
+  max-width: 550px;
   height: auto;
+  border-radius: 12px; 
 }
 
 .rte-media-caption {
-  text-align: center;  /* ensure caption is centered */
+  text-align: center; /* ensure caption is centered */
   font-size: 0.9rem;
-  color: #555; /* optional styling */
+  color: #555;
   margin-top: 0.5em;
+  /* Optional: Add a slight italic style to the caption */
+  font-style: italic;
 }
 
 
