Adjust image sizes

--- a/assets/css/jekyll-theme-chirpy.scss
+++ b/assets/css/jekyll-theme-chirpy.scss
@@ -13,14 +13,14 @@
 /* Custom CSS for Image Sizing */
 .img-half {
 
-  max-width: 50vw;
+  max-width: 35rem;
   height: auto;
 
 
 }
 
 .img-third {
-  max-width: 33vw;
+  max-width: 15rem;
   height: auto;
 
 
